[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
argon2 = { version = "0.3", features = ["std"] } 
hmac = { version = "0.12", features = ["std"] }
actix-web = "4"
config = { version = "0.13", default-features = false, features = ["yaml"] }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
serde = "1.0.160"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", default-features = false, features = ["offline", "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version="1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.4"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
claim = "0.5.0"
validator = "0.16.0"
fake = "~2.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
base64 = "0.21.2"
urlencoding = "2.1.2"
htmlescape = "0.3.1"
sha2 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
once_cell = "1.17.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9.0"
